--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+	font-family: 'Helvetica Neue';
+	src: url("../public/fonts/HelveticaNeueRoman.otf") format('opentype');
+	
+	font-weight: normal;
+	font-style: normal;
+}
