--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,22 @@
 .xd svg text{
 	fill: green !important;
 }
+
+
+.bg {
+	border-top: 2px solid rgb(69, 8, 223);
+	border-radius: 32px 32px 0 0;
+	background: linear-gradient(180deg, rgb(15, 13, 62), rgb(19, 14, 36) 14.96%, rgb(0, 0, 0) 100%);
+	overflow: hidden; /* Add this line */
+}
+
+.bg::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 32px; /* Adjust this value to match your border-radius */
+
+	z-index: 1;
+}
