--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,15 @@
 
 	z-index: 1;
 }
+
+
+.glow-effect {
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	top: 5px;
+	filter: blur(16px);
+	background: linear-gradient(-45deg, rgb(254, 183, 0), rgb(255, 219, 127) 66.095%);
+	opacity: 0.5;
+	pointer-events: none; /* Ensures the glow effect doesn't interfere with mouse events */
+}
